* Fixed incorrect "invalid variable" error on weight variables for angular
  quantities when performing a harpmerge.

* Updates to product ingestions:
  - GOMOS L1 Limb: fixed unit of wavelength_photon_radiance (and uncertainty)
    and documented conversion algorithm
  - S5P L2 O3 PR: support for IODD 12.0.0
  - S5P L2 O3 TPR: removed support (future availability of product uncertain)
  - GEOMS PANDORA: allow for trailing \0 in global attribute values

1.9.2 2019-12-01
~~~~~~~~~~~~~~~~

* Fixed issue where using the 'bin()' operation did not correctly create a
  '<variable>_weight' variable from a 'weight' variable when it was missing.

* Added default units to documention on variable name conventions.

* Updates to product ingestions:
  - Calipso L2: fixed unit of backscatter coefficient
  - ERS GOME L2: fixed unit of cloud top height
  - S5P L2 AER_LH: fixed unit of aerosol optical depth
  - S5P L2 SO2: add scaled avk for 1km/7km/15km box profiles

1.9.1 2019-11-01
~~~~~~~~~~~~~~~~

* Fixed issue where results from deriving partial column densities from vmr and
  pressure were a factor 10 too low.

* Fixed issue where operation following an index filter operation did not
  get executed.

1.9 2019-10-21
~~~~~~~~~~~~~~

* Added operations to filter on dimension indices (e.g. 'index(vertical) < 5').

* Changed bin() and bin_spatial() operations to use/produce separate 'count'
  and 'weight' variables. The counts/weights are used to allow the following
  commands to now be equivalent:
    harpmerge -a 'bin()' -ap 'bin()' a.nc b.nc merged.nc
    harpmerge -ap 'bin()' a.nc b.nc merged.nc
  As well as the following:
    harpmerge -a 'bin_spatial(...)'
      -ap 'squash(time, (latitude_bounds, longitude_bounds));bin()'
      a.nc b.nc merged.nc
    harpmerge -ap 'bin_spatial(...)' a.nc b.nc merged.nc

* Fixed issue with invalid bounding box optimization for spherical area
  filter operations.

* Fixed missing error handling when using invalid operations in