@@ -179,6 +179,12 @@ the time dimension and storing the result into a single output file.</p>
                 <span class="n">more</span> <span class="n">details</span><span class="o">.</span>
                 <span class="n">Operations</span> <span class="n">will</span> <span class="n">be</span> <span class="n">performed</span> <span class="n">before</span> <span class="n">a</span> <span class="n">product</span> <span class="ow">is</span> <span class="n">appended</span><span class="o">.</span>
 
+            <span class="o">-</span><span class="n">ar</span><span class="p">,</span> <span class="o">--</span><span class="n">reduce</span><span class="o">-</span><span class="n">operations</span> <span class="o">&lt;</span><span class="n">operation</span> <span class="nb">list</span><span class="o">&gt;</span>
+                <span class="n">List</span> <span class="n">of</span> <span class="n">operations</span> <span class="n">to</span> <span class="n">apply</span> <span class="n">after</span> <span class="n">each</span> <span class="n">append</span><span class="o">.</span>
+                <span class="n">This</span> <span class="n">advanced</span> <span class="n">option</span> <span class="n">allows</span> <span class="k">for</span> <span class="n">memory</span> <span class="n">efficient</span> <span class="n">application</span>
+                <span class="n">of</span> <span class="n">time</span> <span class="n">reduction</span> <span class="n">operations</span> <span class="p">(</span><span class="n">such</span> <span class="k">as</span> <span class="nb">bin</span><span class="p">())</span> <span class="n">that</span> <span class="n">would</span>
+                <span class="n">normally</span> <span class="n">be</span> <span class="n">provided</span> <span class="k">as</span> <span class="n">part</span> <span class="n">of</span> <span class="n">the</span> <span class="n">post</span> <span class="n">operations</span><span class="o">.</span>
+
              <span class="o">-</span><span class="n">ap</span><span class="p">,</span> <span class="o">--</span><span class="n">post</span><span class="o">-</span><span class="n">operations</span> <span class="o">&lt;</span><span class="n">operation</span> <span class="nb">list</span><span class="o">&gt;</span>
                  <span class="n">List</span> <span class="n">of</span> <span class="n">operations</span> <span class="n">to</span> <span class="n">apply</span> <span class="n">to</span> <span class="n">the</span> <span class="n">merged</span> <span class="n">product</span><span class="o">.</span>
                  <span class="n">An</span> <span class="n">operation</span> <span class="nb">list</span> <span class="n">needs</span> <span class="n">to</span> <span class="n">be</span> <span class="n">provided</span> <span class="k">as</span> <span class="n">a</span> <span class="n">single</span> <span class="n">expression</span><span class="o">.</span>
