@@ -626,7 +626,7 @@ considered to be invalid.</li>
 <p>This section describes the functions defined by the HARP Python library.</p>
 <dl class="function">
 <dt id="harp.import_product">
-<code class="descclassname">harp.</code><code class="descname">import_product</code><span class="sig-paren">(</span><em>filename</em>, <em>operations=&quot;&quot;</em>, <em>options=&quot;&quot;</em>, <em>post_operations=&quot;&quot;</em><span class="sig-paren">)</span></dt>
+<code class="descclassname">harp.</code><code class="descname">import_product</code><span class="sig-paren">(</span><em>filename</em>, <em>operations=&quot;&quot;</em>, <em>options=&quot;&quot;</em>, <em>reduce_operations=&quot;&quot;</em>, <em>post_operations=&quot;&quot;</em><span class="sig-paren">)</span></dt>
 <dd><p>Import a product from a file.</p>
 <p>This will first try to import the file as an HDF4, HDF5, or netCDF file that
 complies to the HARP Data Format. If the file is not stored using the HARP
@@ -650,6 +650,13 @@ performed on each product individually before the data is merged.</li>
 <li><strong>options</strong> (<em>str</em>) – Ingestion module specific options; should be specified as
 a semi-colon separated string of key=value pairs; only
 used if a file is not in HARP format.</li>
+<li><strong>reduce_operations</strong> (<em>str</em>) – Actions to apply after each append; should be specified as a
+semi-colon separated string of operations;
+these operations will only be applied if the filename argument is
+a file pattern or a list of filenames/patterns;
+this advanced option allows for memory efficient application
+of time reduction operations (such as bin()) that would
+normally be provided as part of post_operations.</li>
 <li><strong>post_operations</strong> (<em>str</em>) – Actions to apply after the list of products is merged;
 should be specified as a semi-colon separated string of operations;
 these operations will only be applied if the filename argument is
